src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-dhU-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    default-column-width { proportion 0.25; }\n    default-window-height {  }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 283 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 283 × 680, bounds: 1231 × 680, states: []
size: 283 × 680, bounds: 1231 × 680, states: [Activated]
